--- a/css/style.css
+++ b/css/style.css
@@ -3,16 +3,25 @@
     --accent-color:#2196F3;
     --primary-font:'Roboto', sans-serif;
     --bg-color: #2F303A;
-    --bg-color-two: #F5F5F5;
+    --bg-color-two:#FFFFFF; 
     --primary-text-color: #212121;
     --second-text-color: #757575;
-    --third-text-color:#FFFFFF;
+    --third-text-color:#F5F5F5;
     --fourth-text-color: #F5F4FA;
     
     
 }
 
+h1,h2,h3,h4,p {
+  margin-top: 0;
+  margin-bottom: 0;
+}
 
+ul,ol {
+    margin-top: 0;
+  margin-bottom: 0;
+  padding-left: 0;
+}
 
 
 img {
@@ -36,9 +45,9 @@ body {
     
     font-size: 14px;
     letter-spacing: 0.03em;
+    color: var(--primary-text-color);
+    font-family: var(--primary-font);
     background-color: var(--bg-color-two);
-    color: var(--third-text-color);
-    font-family: var(--primary-font)
      
 }
 .visually-hidden {
@@ -53,7 +62,20 @@ body {
     clip: rect(0 0 0 0);
     overflow: hidden;
 }
-/* HEADER*/
+
+.conteiner  {
+    width: 1200px;
+    margin-left: auto;
+    margin-right: auto;
+    padding-left: 15px;
+    padding-right: 15px;
+}
+/* =================HEADER=======================*/
+
+.header-page-container {
+    display: flex;
+    align-items: center;
+}
 
 .logo {
     font-family: 'Raleway',sans-serif;
@@ -62,18 +84,42 @@ font-size: 26px;
 line-height: 1.19;
 letter-spacing: 0.03em;
 color: #000000;
+margin-right: 90px;
+
 }
 
 .part-logo {
     color:var(--accent-color)
 }
 
+.menu {
+    display: flex;
+    align-items: center;
+    margin-top: 32px;
+    margin-bottom: 32px;
+}
+
+.contacts {
+    display: flex;
+    margin-left: auto;
+    gap: 50px;
+}
+.menu-item:not(:last-child) {
+    margin-right: 50px;
+  
+}
+
+
+
 .menu-link {
+    padding-top: 32px;
+    padding-bottom: 32px;
 font-weight: 500;
 font-size: 14px;
 line-height: 1.14;
 letter-spacing: 0.02em;
 color: var(--primary-text-color);
+
 }
 
 
@@ -86,8 +132,13 @@ color: var(--primary-text-color);
     color: var(--accent-color);
 }
 
+.mail {
+    
+}
+
 .mail,
 .phone {
+   
   font-weight: 500;
 font-size: 14px;
 line-height: 1.14;
@@ -100,10 +151,16 @@ color:var(--second-text-color);
     color: var(--accent-color)
 }
 
-/* MAIN*/
-/*---SECTION 1------*/
+/* ==================MAIN==================*/
+
+/*---------------SECTION 1-----------------*/
+
 .business-solutions {
     background-color:var(--bg-color);
+    text-align: center;
+    margin-bottom: 94px;
+
+
 }
 .business-solutions-one {
  
@@ -114,6 +171,13 @@ text-align: center;
 letter-spacing: 0.06em;
 text-transform: uppercase;
 color:var(--third-text-color);
+width: 696px;
+display: inline-block;
+margin-right: auto;
+margin-left: auto;
+margin-top: 200px;
+margin-bottom: 30px;
+
 }
 
 .btn-form {
@@ -126,27 +190,61 @@ text-align: center;
 letter-spacing: 0.06em;
 color:var(--third-text-color);
 background-color: #188CE8;
+margin-right: auto;
+margin-left: auto;
+/* margin-bottom: 200px; */
+
+
+
+}
+.hero {
+    padding-bottom: 200px;
 }
 
 .btn-form:hover, .btn-form:focus {
    background-color: var(--accent-color)
 }
 
-/*-----SECTION 2-------*/
+/*------------------SECTION 2----------------*/
+
+
 .advantage { 
 font-weight: 700;
 font-size: 14px;
 line-height: 1.14;
 letter-spacing: 0.03em;
 text-transform: uppercase;
+margin-bottom: 10px;
+
 
 }
+
+.advantages-item {
+width: 270px;
+}
+
 .about-advantage { 
 font-weight: 400;
 font-size: 14px;
 line-height: 1.71;
 letter-spacing: 0.03em;
 color:var(--second-text-color);
+}
+.list-advantages {
+    display: flex;
+ 
+  
+    
+
+}
+
+
+.advantages-item:not(:last-child) {
+margin-right: 30px; 
+} 
+
+.advantages { 
+        margin-bottom: 94px;
 }
 
 /*----SECTION 3--------*/
@@ -156,11 +254,26 @@ font-size: 36px;
 line-height: 1.17;
 text-align: center;
 letter-spacing: 0.03em;
+margin-bottom: 50px;
 }
+
+.work-list {
+    display: flex;
+    gap: 30px;
+}
+
+.work-section {
+    margin-bottom: 94px;
+}
+
+/* .work-list:not(:last-child) {
+    margin-right: 30px;
+} */
 /* -----SECTION 4 ------*/
 
 .team {
     background-color:var(--fourth-text-color);
+    margin-bottom: 94px;
 }
 .our-team { 
 font-weight: 700;
@@ -168,6 +281,8 @@ font-size: 36px;
 line-height: 1.17;
 text-align: center;
 letter-spacing: 0.03em;
+padding-top: 94px;
+margin-bottom: 50px;
 }
 .team-members {  
 font-weight: 500;
@@ -175,6 +290,8 @@ font-size: 16px;
 line-height: 1.19;
 text-align: center;
 letter-spacing: 0.03em;
+margin-top: 30px;
+margin-bottom: 10px;
 }
 
 .team-professions { 
@@ -184,9 +301,29 @@ line-height: 1.19;
 text-align: center;
 letter-spacing: 0.03em;
 color:var(--second-text-color);
+margin-bottom: 30px;
+
+}
+
+
+
+.list-team {
+    display: flex;
+    gap: 30px;
 }
 
 /*-----FOOTER-----*/
+
+.logo-foter {
+  display: inline-block;
+  margin-top: 60px;
+  margin-bottom: 20px;
+}
+
+.list-contacts {
+   
+    margin-bottom: 9px;
+}
 
 .part-logo-w {
     color:var(--third-text-color);
@@ -215,12 +352,47 @@ color: rgba(255, 255, 255, 0.6);
 }
 
 .page-bottom {
-    background-color:var(--bg-color)
+    background-color:var(--bg-color);
+    padding-bottom: 60px;
+    
+}
+.list-phone {
+    margin-bottom: 0;
 }
 
 /*----PORTFOLIO-------*/
 
 /*----MAIN-------*/
+
+.portfolio {
+    margin-top: 94px;
+    margin-bottom: 94px;
+}
+
+.list-buttons {
+    display: flex;
+    justify-content: center;
+    margin-bottom: 50px;
+    /* margin-left: auto;
+    margin-right: auto; */
+}
+
+.list-btn {
+    display: flex;
+    /* margin-right: 8px; */
+
+   
+}
+.list-btn:not(:last-child) {
+    margin-right: 8px;
+}
+
+.list-pictures {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+}
+
 .btn-filter {
 font-weight: 500;
 font-size: 16px;
@@ -229,8 +401,16 @@ text-align: center;
 letter-spacing: 0.03em;
 color: var(--primary-text-color);
 border-color:var(--fourth-text-color);
+border-radius: 4px;
+display: inline-block;
+height: 38px;
+padding-left: 22px;
+padding-right: 22px;
 }
 
+/* .btn-filter:not(:last-child) {
+    margin-right: 8px;
+} */
 .btn-filter:hover, .btn-filter:focus {
 
   background-color:var(--accent-color);
